# MiniCSPM

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
checks/: __init__.py  cis_1_10_no_inline_policies_root.py  cis_1_11_no_admin_privilege_escalation.py  cis_1_12_awsmfa_console.py  cis_1_13_credential_report.py  cis_1_14_iam_access_analyzer.py  cis_1_15_no_root_access_keys.py  cis_1_16_securityhub_enabled.py  cis_1_17_waf_enabled.py  cis_1_18_guardduty_enabled.py  cis_1_19_cloudtrail_enabled.py  cis_1_1_root_mfa.py  cis_1_20_iam_user_rotation.py  cis_1_21_kms_rotations.py  cis_1_22_mfa_console_users.py  cis_1_2_no_root_keys.py  cis_1_3_root_access_key_rotated.py  cis_1_4_unused_credentials_disabled.py  cis_1_5_password_policy.py  cis_1_6_immediate_password_policy.py  cis_1_7_root_hardware_mfa.py  cis_1_8_vpc_flow_logs.py  cis_1_9_password_policy_expiry.py  cis_2_1_cloudtrail_all_regions.py  cis_2_2_cloudtrail_log_validation.py  cis_2_3_cloudtrail_encrypted_kms.py  cis_2_4_cloudtrail_bucket_logging.py  cis_2_5_s3_bucket_encryption.py  cis_3_1_unauth_api_metric_filter.py  cis_3_2_cloudwatch_alarm_root.py  cis_4_1_sg_no_0_0_0_0_22_3389.py  cis_5_1_s3_account_pab_on.py  registry.py
cli/: __init__.py  main.py
docs/: CONTROLS.md  DEMO.md  MAPPING.csv  README.md  demo_reset.py  demo_setup.py
minicspm/: __init__.py
scripts/: check_allowlist.py  generate_sample_csv.py
tests/: conftest.py  test_allowlist.py  test_asff.py  test_checks_mvp.py  (+10 more)
(+19 files in other folders)
