[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-cspm"
description = "Mini Cloud Security Posture Management tooling for AWS CIS 25"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Mini-CSPM Team"}]
version = "0.1.0"
dependencies = [
  "boto3>=1.34,<2.0",
  "python-dateutil>=2.8,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pip-audit>=2.7,<3.0",
  "black>=24.8,<25.0",
  "ruff>=0.5,<0.6"
]

[project.scripts]
mini-cspm = "cli.main:main"

[tool.setuptools]
packages = ["cli", "checks", "minicspm"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
